new file:   examples/BlinkTask/BlinkTask.ino

--- a/library.properties
+++ b/library.properties
@@ -7,3 +7,4 @@ paragraph=FreeRTOS provides methods for multiple threads or tasks, mutexes, sema
 category=Timing
 url=https://github.com/discord-intech/FreeRTOS-Teensy4.git
 architectures=teensy
+includes=FreeRTOS.h
