--- a/library.properties
+++ b/library.properties
@@ -1,10 +1,10 @@
 name=FreeRTOS-Teensy4
 version=10.0.5
 author=Julian Desvignes <julian.desvignes@rakuten.com>
-maintainer=Julian Desvignes <julian.desvignes@rakuten.com>
+maintainer=Simon D. Levy <simon.d.levy@gmail.com>
 sentence=Teensy 4.0 FreeRTOS Library for Teensyduino
 paragraph=FreeRTOS provides methods for multiple threads or tasks, mutexes, semaphores, ... with a small footprint.
 category=Timing
-url=https://github.com/discord-intech/FreeRTOS-Teensy4.git
-architectures=teensy
+url=https://github.com/simondlevy/FreeRTOS-Teenst4
+architectures=avr
 includes=FreeRTOS.h
